--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,11 @@
     <string name="follower">Follower</string>
     <string name="following">Following</string>
     <string name="user_tidak_ditemukan">User Tidak Ditemukan</string>
+    <string name="hasil_pencarian">Hasil Pencarian</string>
     <string name="user_tidak_memiliki_follower">User Tidak Memiliki Follower</string>
+    <string name="user_tidak_memiliki_orang_yang_difollow">User tidak memiliki orang yang difollow</string>
+    <string name="Favorite">Favorite</string>
+    <string name="Setting">Setting</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="list_favorite_mu_masih_kosong">List Favorite mu Masih Kosong</string>
 </resources>
